objects/Skill__c.object
<CustomObject>
    <fields>
        <fullName>Added_Skills__c</fullName>
        <label>Added Skills</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>New_Skills_Added__c</fullName>
        <label>New Skills Added</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Skill</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Skill Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Skills</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>